tests/type/bad/unbound_identifier.hel
foreign io_unit: IO<()>;

x = unknown_var;

main = io_unit;
